[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/sounds/mag_empty.wav" type="AudioStream" id=1]
[ext_resource path="res://objs/player/guns/guns.gd" type="Script" id=2]
[ext_resource path="res://objs/player/guns/machine_gun.tscn" type="PackedScene" id=3]
[ext_resource path="res://objs/player/guns/gun.gd" type="Script" id=4]
[ext_resource path="res://objs/player/guns/bullet_impact.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/sounds/reload_sound.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sounds/gun_shot.wav" type="AudioStream" id=7]
[ext_resource path="res://objs/player/guns/blood_particles.tscn" type="PackedScene" id=8]
[ext_resource path="res://objs/player/crosshair/crosshair.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFontData" id=3]
font_path = "res://assets/Roboto-Regular.ttf"

[sub_resource type="DynamicFont" id=4]
size = 33
font_data = SubResource( 3 )

[sub_resource type="Theme" id=5]
default_font = SubResource( 4 )

[node name="guns" type="Spatial"]
script = ExtResource( 2 )

[node name="crosshair" parent="." instance=ExtResource( 9 )]

[node name="bullet_spread" type="Position3D" parent="."]

[node name="ray" type="RayCast" parent="bullet_spread"]
enabled = true
cast_to = Vector3( 0, 0, -300 )
collision_mask = 7

[node name="hud" type="CanvasLayer" parent="."]

[node name="ammo" type="Label" parent="hud"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -220.0
margin_top = -162.0
margin_right = -50.0
margin_bottom = -50.0
theme = SubResource( 5 )
align = 2
valign = 2

[node name="guns" type="Position3D" parent="."]

[node name="machine_gun" parent="guns" instance=ExtResource( 3 )]
transform = Transform( -0.0384494, 0.000509333, 0.99926, 0.0322747, 0.999479, 0.000732417, -0.99874, 0.032279, -0.0384458, 0.224981, -0.144508, -0.443997 )
script = ExtResource( 4 )
fire_sound = ExtResource( 7 )
reload_sound = ExtResource( 6 )
empty_sound = ExtResource( 1 )
bullet_impact = ExtResource( 5 )
blood_scene = ExtResource( 8 )
fire_animation = "fire_anim"
reload_animation = "reload_anim"
run_animation = "run_animation"
run_transition = "run_transition"
walk_animation = "walk_anim"

[node name="fire_rate_timer" type="Timer" parent="guns/machine_gun"]
wait_time = 0.1
one_shot = true

[node name="recoil_timer" type="Timer" parent="guns/machine_gun"]
wait_time = 0.2
one_shot = true
